Move two getCapabilities() methods out of media capabilities
These aren't part of the same API. They're defined here:
https://w3c.github.io/mediacapture-main/#dom-inputdeviceinfo-getcapabilities
https://w3c.github.io/mediacapture-main/#dom-mediastreamtrack-getcapabilities

Removing the compute_from here to match the feature description makes
the Baseline year change from 2020 to 20222, but this seems OK.

--- a/features/media-capture.yml
+++ b/features/media-capture.yml
@@ -6,6 +6,7 @@ status:
   compute_from: api.MediaDevices.getUserMedia
 compat_features:
   - api.InputDeviceInfo
+  - api.InputDeviceInfo.getCapabilities
   - api.MediaDeviceInfo
   - api.MediaDeviceInfo.deviceId
   - api.MediaDeviceInfo.groupId
@@ -52,6 +53,7 @@ compat_features:
   - api.MediaStreamTrack.enabled
   - api.MediaStreamTrack.ended_event
   - api.MediaStreamTrack.id
+  - api.MediaStreamTrack.getCapabilities
   - api.MediaStreamTrack.getConstraints
   - api.MediaStreamTrack.getSettings
   - api.MediaStreamTrack.kind
