--- a/features/media-capture.yml.dist
+++ b/features/media-capture.yml.dist
@@ -440,6 +440,18 @@ compat_features:
   # baseline: low
   # baseline_low_date: 2024-10-29
   # support:
+  #   chrome: "59"
+  #   chrome_android: "59"
+  #   edge: "12"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "11"
+  #   safari_ios: "11"
+  - api.MediaStreamTrack.getCapabilities
+
+  # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
   #   chrome: "64"
   #   chrome_android: "64"
   #   edge: "79"
@@ -535,6 +547,15 @@ compat_features:
   #   safari: "11.1"
   #   safari_ios: "11.3"
   - api.OverconstrainedError.constraint
+
+  # baseline: false
+  # support:
+  #   chrome: "67"
+  #   chrome_android: "67"
+  #   edge: "79"
+  #   safari: "17"
+  #   safari_ios: "17"
+  - api.InputDeviceInfo.getCapabilities
 
   # baseline: false
   # support:
