--- a/features/reading-flow.yml.dist
+++ b/features/reading-flow.yml.dist
@@ -16,3 +16,4 @@ compat_features:
   - css.properties.reading-flow.grid-rows
   - css.properties.reading-flow.normal
   - css.properties.reading-flow.source-order
+  - css.properties.reading-order
