--- a/features/cookie-enabled.yml
+++ b/features/cookie-enabled.yml
@@ -1,5 +1,6 @@
 name: cookieEnabled
 description: "The `navigator.cookieEnabled` property is a boolean for whether the browser accepts or ignores attempts to write cookie data."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#cookies
+group: cookies
 compat_features:
   - api.Navigator.cookieEnabled
