--- a/features/partitioned-cookies.yml
+++ b/features/partitioned-cookies.yml
@@ -1,6 +1,7 @@
 name: Partitioned cookies
 description: Partitioned cookies allow you to opt a cookie into partitioned storage, with a separate cookie jar per top-level site. Also known as Cookies Having Independent Partitioned State or CHIPS.
 spec: https://cookiestore.spec.whatwg.org/
+group: cookies
 compat_features:
   - api.CookieStore.delete.partitioned_option
   - api.CookieStore.get.partitioned_return_property
