--- a/features/dom-geometry.yml
+++ b/features/dom-geometry.yml
@@ -1,5 +1,5 @@
 name: DOM Geometry
-description: The `DOMMatrix`, `DOMPoint`, `DOMQuad` and `DOMRect` APIs offer a way to represent points, rectangles, quadrilaterals and transformation matrices within JavaScript. They can be used in transformations in CSS, `<canvas>`, and SVG.
+description: The `DOMMatrix`, `DOMPoint`, `DOMQuad` and `DOMRect` APIs represent points, rectangles, quadrilaterals and transformation matrices within JavaScript. They can be used in transformations in CSS, `<canvas>`, and SVG.
 spec: https://drafts.fxtf.org/geometry-1/
 status:
   compute_from: api.DOMMatrix
