--- a/features/shapes.yml.dist
+++ b/features/shapes.yml.dist
@@ -33,6 +33,19 @@ compat_features:
   - css.types.basic-shape.inset
   - css.types.basic-shape.polygon
 
+  # baseline: low
+  # baseline_low_date: 2024-01-23
+  # support:
+  #   chrome: "119"
+  #   chrome_android: "119"
+  #   edge: "119"
+  #   firefox: "122"
+  #   firefox_android: "122"
+  #   safari: "17.2"
+  #   safari_ios: "17.2"
+  - css.types.basic-shape.rect
+  - css.types.basic-shape.xywh
+
   # baseline: false
   # support:
   #   chrome: "135"
@@ -41,12 +54,3 @@ compat_features:
   #   safari: "18.4"
   #   safari_ios: "18.4"
   - css.types.basic-shape.shape
-
-  # baseline: false
-  # support:
-  #   firefox: "122"
-  #   firefox_android: "122"
-  #   safari: "17.2"
-  #   safari_ios: "17.2"
-  - css.types.basic-shape.rect
-  - css.types.basic-shape.xywh
