--- a/features/slot-assign.yml.dist
+++ b/features/slot-assign.yml.dist
@@ -5,13 +5,35 @@ status:
   baseline: low
   baseline_low_date: 2023-03-27
   support:
-    chrome: "86"
-    chrome_android: "86"
-    edge: "86"
+    chrome: "92"
+    chrome_android: "92"
+    edge: "92"
     firefox: "92"
     firefox_android: "92"
     safari: "16.4"
     safari_ios: "16.4"
 compat_features:
-  - api.HTMLSlotElement.assign
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "86"
+  #   chrome_android: "86"
+  #   edge: "86"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
   - api.ShadowRoot.slotAssignment
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "92"
+  #   chrome_android: "92"
+  #   edge: "92"
+  #   firefox: "92"
+  #   firefox_android: "92"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.HTMLSlotElement.assign
