--- a/features/host-context.yml
+++ b/features/host-context.yml
@@ -1,4 +1,4 @@
-name: host-context
+name: ":host-context()"
 description: The `:host-context()` CSS pseudo-class selects the containing element of the shadow tree in which it is used if that element or an ancestor matches the provided selector.
 spec: https://drafts.csswg.org/css-scoping-1/#host-selector
 group:
