--- a/features/viewport-segments.yml
+++ b/features/viewport-segments.yml
@@ -1,5 +1,5 @@
 name: Viewport segments
-description: "The `viewport-segment-` CSS environment variables, the `horizontal-viewport-segments` and `vertical-viewport-segments` media features, and the `viewport.segments` API allow you to adapt your layout to devices where the display is split, such as foldable devices."
+description: "The `viewport-segment-*` CSS environment variables, the `horizontal-viewport-segments` and `vertical-viewport-segments` media features, and the `viewport.segments` API allow you to adapt your layout to devices where the display is split, such as on foldable devices."
 spec:
   - https://drafts.csswg.org/css-env-1/#viewport-segments
   - https://drafts.csswg.org/css-viewport/#segments
