Add Baseline regression notes to the schema

--- a/features/popover.yml
+++ b/features/popover.yml
@@ -2,16 +2,16 @@ name: Popover
 description: The `popover` HTML attribute creates an overlay to display content on top of other page content. Popovers can be shown declaratively using HTML, or using the `showPopover()` method.
 spec: https://html.spec.whatwg.org/multipage/popover.html
 group: html
-notes:
-  - date: 2024-09-18
-    category: baseline-regression
-    old_baseline_value: low
-    new_baseline_value: false
-    message: >
-      Upstream data reported that Safari on iOS had a bug that prevented light dismiss (tapping outside the element to close it).
-    citations:
-      - https://bugs.webkit.org/show_bug.cgi?id=267688
-      - https://github.com/mdn/browser-compat-data/issues/22927
+# notes:
+#   - date: 2024-09-18
+#     category: baseline-regression
+#     old_baseline_value: low
+#     new_baseline_value: false
+#     message: >
+#       Upstream data reported that Safari on iOS had a bug that prevented light dismiss (tapping outside the element to close it).
+#     citations:
+#       - https://bugs.webkit.org/show_bug.cgi?id=267688
+#       - https://github.com/mdn/browser-compat-data/issues/22927
 status:
   compute_from:
     - api.HTMLElement.popover
