Revise regression notes to follow the new guidelines

--- a/features/content-visibility.yml
+++ b/features/content-visibility.yml
@@ -9,7 +9,7 @@ notes:
     old_baseline_value: low
     new_baseline_value: false
     message: >
-      Upstream data reported that Safari prevented text in `content-visibility: auto` elements from being found with browser's "Find…" user interface.
+      Safari prevents text in `content-visibility: auto` elements from being found with browser's "Find…" user interface.
     citations:
       - https://bugs.webkit.org/show_bug.cgi?id=283846
 compat_features:
