--- a/features/createimagebitmap.yml
+++ b/features/createimagebitmap.yml
@@ -8,7 +8,7 @@ notes:
     old_baseline_value: high
     new_baseline_value: low
     message: >
-      This feature's status was recalculated to be more consistent with caniuse.
+      This feature's status was recalculated to be more consistent with caniuse's criteria for full support, requiring `SVGImageElement` as a supported image source.
     citations:
       - https://github.com/web-platform-dx/web-features/pull/3173
 status:
