--- a/features/font-variant-position.yml
+++ b/features/font-variant-position.yml
@@ -8,7 +8,7 @@ notes:
     old_baseline_value: low
     new_baseline_value: false
     message: >
-      Upstream data reported that Chrome, Edge, and Safari did not implement font synthesis for missing superscript or subscript glyphs.
+      Chrome, Edge, and Safari do not implement font synthesis for missing superscript or subscript glyphs.
     citations:
       - https://issues.chromium.org/issues/352218916
       - https://bugs.webkit.org/show_bug.cgi?id=151471
