--- a/features/popover.yml
+++ b/features/popover.yml
@@ -8,7 +8,7 @@ group: html
 #     old_baseline_value: low
 #     new_baseline_value: false
 #     message: >
-#       Upstream data reported that Safari on iOS had a bug that prevented light dismiss (tapping outside the element to close it).
+#       Safari on iOS has a bug that prevents light dismiss (tapping outside the element to close it).
 #     citations:
 #       - https://bugs.webkit.org/show_bug.cgi?id=267688
 #       - https://github.com/mdn/browser-compat-data/issues/22927
