--- a/features/link-rel-dns-prefetch.yml
+++ b/features/link-rel-dns-prefetch.yml
@@ -8,7 +8,7 @@ notes:
     old_baseline_value: low
     new_baseline_value: false
     message: >
-      Upstream data corrected an earlier report that Safari on iOS supported this feature when it did not.
+      Safari on iOS does not support this feature. Upstream data corrected an earlier report that it did.
     citations:
       - https://github.com/mdn/browser-compat-data/pull/27057
 compat_features:
