Fix assignment of `css.properties.page`
This was mistakenly added to page selectors, instead of the `@page` at rule

--- a/features/page-setup.yml
+++ b/features/page-setup.yml
@@ -28,3 +28,4 @@ compat_features:
   - css.at-rules.page.top-left-corner
   - css.at-rules.page.top-right
   - css.at-rules.page.top-right-corner
+  - css.properties.page
