--- a/features/page-setup.yml.dist
+++ b/features/page-setup.yml.dist
@@ -13,6 +13,19 @@ status:
     safari: "18.2"
     safari_ios: "18.2"
 compat_features:
+  # baseline: high
+  # baseline_low_date: 2023-02-14
+  # baseline_high_date: 2025-08-14
+  # support:
+  #   chrome: "85"
+  #   chrome_android: "85"
+  #   edge: "85"
+  #   firefox: "110"
+  #   firefox_android: "110"
+  #   safari: "1"
+  #   safari_ios: "1"
+  - css.properties.page
+
   # baseline: low
   # baseline_low_date: 2024-12-11
   # support:
