Split the worklets group from workers
Workers and worklets are similar in concept, but worklets a
"thread-agnostic" and can be run on the main thread, this is an
implementation choice:

https://html.spec.whatwg.org/multipage/worklets.html#worklets-motivations

--- a/features/audio-worklet.yml
+++ b/features/audio-worklet.yml
@@ -3,7 +3,7 @@ description: The `AudioWorklet` API runs module code in a separate thread, speci
 spec: https://webaudio.github.io/web-audio-api/#AudioWorklet
 group:
   - web-audio
-  - workers
+  - worklets
 status:
   compute_from:
     - api.AudioWorklet
