--- a/groups/workers.yml
+++ b/groups/workers.yml
@@ -1,2 +1,3 @@
-# Features for running scripts alongside the main thread (i.e., workers and worklets)
+# https://html.spec.whatwg.org/multipage/workers.html and specific worker
+# types like shared workers, service workers, etc.
 name: Workers
