--- a/features/paint.yml
+++ b/features/paint.yml
@@ -1,7 +1,9 @@
 name: paint()
 description: The `paint()` CSS function creates a custom image, drawn using a paint worklet, for an element's background or border.
 spec: https://drafts.css-houdini.org/css-paint-api-1/
-group: css
+group:
+  - css
+  - worklets
 caniuse: css-paint-api
 status:
   compute_from: css.types.image.paint
