--- a/features/cross-document-view-transitions.yml
+++ b/features/cross-document-view-transitions.yml
@@ -2,6 +2,7 @@ name: Cross-document view transitions
 description: The `@view-transition` CSS rule sets whether a document opts-in to transitions between documents in a multi-page application. Both the old and new document must opt-in for a transition to be triggered.
 spec: https://drafts.csswg.org/css-view-transitions-2/#cross-doc-opt-in
 group: view-transitions
+caniuse: cross-document-view-transitions
 compat_features:
   - api.CSSViewTransitionRule
   - api.CSSViewTransitionRule.navigation
