Apply suggestions from code review
Co-authored-by: Patrick Brosset <patrickbrosset@gmail.com>

--- a/features/heading-selectors.yml
+++ b/features/heading-selectors.yml
@@ -1,5 +1,5 @@
-name: Heading level pseudo-selectors
-description: The `:heading` and `:heading()` CSS pseudo-classes match headings of varying levels
+name: Heading pseudo-classes
+description: The `:heading` and `:heading()` CSS pseudo-classes match headings of varying levels.
 spec: https://drafts.csswg.org/selectors-5/#headings
 group: selectors
 compat_features:
