Add caniuse links or comments where the (normalized) IDs match
This covers all cases where the web-features and caniuse IDs are the
same if hyphens are removed. Some are "false friends" and comments were
added to avoid them being matched in the future.

--- a/features/accelerometer.yml
+++ b/features/accelerometer.yml
@@ -1,6 +1,7 @@
 name: Accelerometer
 description: The `Accelerometer`, `LinearAccelerationSensor` and `GravitySensor` APIs read the acceleration applied to a device in three dimensions, either including the effect of gravity, without its effect, or only its effect, respectively.
 spec: https://w3c.github.io/accelerometer/
+caniuse: accelerometer
 group: sensors
 status:
   compute_from:
