--- a/features/gyroscope.yml
+++ b/features/gyroscope.yml
@@ -1,6 +1,7 @@
 name: Gyroscope
 description: The `Gyroscope` API reads the angular velocity of a device in three dimensions.
 spec: https://w3c.github.io/gyroscope/#gyroscope-interface
+caniuse: gyroscope
 group: sensors
 status:
   compute_from: api.Gyroscope
