--- a/features/magnetometer.yml
+++ b/features/magnetometer.yml
@@ -1,6 +1,7 @@
 name: Magnetometer
 description: The `Magnetometer` API reads magnetic field sensor data from the device's magnetometer.
 spec: https://w3c.github.io/magnetometer/
+caniuse: magnetometer
 group: sensors
 compat_features:
   - api.Magnetometer
