--- a/features/mutationobserver.yml
+++ b/features/mutationobserver.yml
@@ -1,6 +1,7 @@
 name: MutationObserver
 description: The `MutationObserver` API watches for changes to the DOM tree and calls a callback function when DOM changes occur.
 spec: https://dom.spec.whatwg.org/#interface-mutationobserver
+caniuse: mutationobserver
 group: dom
 compat_features:
   - api.MutationObserver
