--- a/features/orientation-sensor.yml
+++ b/features/orientation-sensor.yml
@@ -3,6 +3,7 @@ description: The `AbsoluteOrientationSensor` and `RelativeOrientationSensor` API
 spec:
   - https://w3c.github.io/orientation-sensor/#absoluteorientationsensor-interface
   - https://w3c.github.io/orientation-sensor/#relativeorientationsensor-interface
+caniuse: orientation-sensor
 group: sensors
 compat_features:
   - api.OrientationSensor
