--- a/features/payment-request.yml
+++ b/features/payment-request.yml
@@ -1,6 +1,7 @@
 name: Payment request
 description: The `PaymentRequest` API prompts the user to make a payment through the browser's user interface.
 spec: https://w3c.github.io/payment-request/
+caniuse: payment-request
 group: payments
 status:
   compute_from: api.PaymentRequest
