--- a/features/background-clip-text.yml
+++ b/features/background-clip-text.yml
@@ -2,4 +2,5 @@
 name: "background-clip: text"
 description: "The `background-clip: text` CSS declaration draws the background underneath only the text in the element."
 spec: https://drafts.csswg.org/css-backgrounds-4/#background-clip
+caniuse: background-clip-text
 group: background
