--- a/features/background-sync.yml
+++ b/features/background-sync.yml
@@ -1,6 +1,7 @@
 name: Background sync
 description: The background synchronization API registers a service worker callback to run only when the device is no longer offline. You can use this to let users continue using your app while offline and synchronize with a server after reconnecting.
 spec: https://wicg.github.io/background-sync/spec/
+caniuse: background-sync
 status:
   compute_from: api.SyncManager
 compat_features:
