--- a/features/intl-plural-rules.yml
+++ b/features/intl-plural-rules.yml
@@ -2,6 +2,7 @@ name: Intl.PluralRules
 description: "The `Intl.PluralRules` API creates a locale-aware object that tells you which of the language's pluralization rules apply based on a given number."
 group: intl
 spec: https://tc39.es/ecma402/#pluralrules-objects
+caniuse: intl-pluralrules
 status:
   compute_from: javascript.builtins.Intl.PluralRules
 compat_features:
