--- a/features/json.yml
+++ b/features/json.yml
@@ -2,6 +2,7 @@ name: JSON
 description: The `JSON` API provides static methods for parsing values from and converting values to JavaScript Object Notation (JSON), a serialization format for objects, arrays, numbers, strings, Boolean values, and null.
 group: json
 spec: https://tc39.es/ecma262/multipage/structured-data.html#sec-json-object
+caniuse: json
 status:
   compute_from: javascript.builtins.JSON
 compat_features:
