--- a/features/menu.yml
+++ b/features/menu.yml
@@ -1,6 +1,8 @@
 name: <menu>
 description: The `<menu>` element represents an unordered list of action items (`<li>`), such as a toolbar. It is a semantic alternative to the `<ul>` element.
 spec: https://html.spec.whatwg.org/multipage/grouping-content.html#menus
+# https://caniuse.com/menu is not linked here because it's for the <menuitem>
+# element, a historical Firefox-only feature.
 group: html-elements
 # TODO: Tag relevant parts of api.HTMLLIElement when possible:
 # https://github.com/web-platform-dx/web-features/issues/1173
