--- a/features/multi-column.yml
+++ b/features/multi-column.yml
@@ -1,6 +1,7 @@
 name: Multi-column layout
 description: Multi-column layout flows an element's content across one or more columns in a single row, without affecting the `display` property of its children.
 spec: https://drafts.csswg.org/css-multicol-1/
+caniuse: multicolumn
 group: multi-column
 status:
   compute_from: css.properties.columns
