--- a/features/pdf-viewer.yml
+++ b/features/pdf-viewer.yml
@@ -1,5 +1,7 @@
 name: pdfViewerEnabled
 description: The `navigator.pdfViewerEnabled` property is a boolean for whether the browser navigates to and shows a PDF in the browser window or downloads the PDF.
 spec: https://html.spec.whatwg.org/multipage/system-state.html#pdf-viewing-support
+# Note: https://caniuse.com/pdf-viewer is not linked because it covers the
+# built-in PDF viewer, which is much older than navigator.pdfViewerEnabled.
 compat_features:
   - api.Navigator.pdfViewerEnabled
