--- a/features/prefers-color-scheme.yml
+++ b/features/prefers-color-scheme.yml
@@ -1,6 +1,7 @@
 name: prefers-color-scheme media query
 description: The `prefers-color-scheme` CSS media query sets styles based on the requested color scheme, light or dark.
 spec: https://drafts.csswg.org/mediaqueries-5/#prefers-color-scheme
+caniuse: prefers-color-scheme
 group: media-queries
 status:
   compute_from: css.at-rules.media.prefers-color-scheme
