--- a/features/registerprotocolhandler.yml
+++ b/features/registerprotocolhandler.yml
@@ -1,6 +1,7 @@
 name: registerProtocolHandler
 description: "The `navigator.registerProtocolHandler()` method declares a site's ability to handle an address scheme (also known as a protocol). For example, an email site can register to open `mailto:` URLs or a VoIP site to open `tel:` URLs."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#custom-handlers
+caniuse: registerprotocolhandler
 status:
   compute_from: api.Navigator.registerProtocolHandler
 compat_features:
