--- a/features/vibration.yml
+++ b/features/vibration.yml
@@ -1,5 +1,6 @@
 name: Vibration
 description: The `navigator.vibrate()` method makes a tactile alert, if the device is equipped with a haptic motor.
 spec: https://w3c.github.io/vibration/
+caniuse: vibration
 compat_features:
   - api.Navigator.vibrate
