--- a/features/data-urls.yml
+++ b/features/data-urls.yml
@@ -1,6 +1,7 @@
 name: Data URLs
 description: Data URLs are URLs that start with the `data:` scheme and which directly contain data rather than point to remote resources.
 spec: https://www.rfc-editor.org/rfc/rfc2397
+caniuse: datauri
 status:
   compute_from: http.data-url
 compat_features:
