--- a/features/serial.yml
+++ b/features/serial.yml
@@ -1,6 +1,7 @@
 name: Web serial
 description: The `navigator.serial` API communicates with devices over serial ports, such as microcontrollers.
 spec: https://wicg.github.io/serial/
+caniuse: web-serial
 status:
   compute_from: api.Navigator.serial
 compat_features:
