--- a/features/share.yml
+++ b/features/share.yml
@@ -1,6 +1,7 @@
 name: navigator.share()
 description: The `navigator.share()` method invokes the device's native sharing mechanism and passes text, links, files, and other content to share targets.
 spec: https://w3c.github.io/web-share/
+caniuse: web-share
 status:
   compute_from: api.Navigator.share
 compat_features:
