--- a/features/spellcheck.yml
+++ b/features/spellcheck.yml
@@ -1,6 +1,7 @@
 name: spellcheck
 description: The `spellcheck` global HTML attribute sets whether the browser may check an element for spelling errors.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#attr-spellcheck
+caniuse: spellcheck-attribute
 compat_features:
   - api.HTMLElement.spellcheck
   - html.global_attributes.spellcheck
