--- a/features/capture-stream-canvas.yml
+++ b/features/capture-stream-canvas.yml
@@ -6,6 +6,8 @@ description: The `captureStream()` method for `<canvas>` elements returns a `Med
 #
 # See also: https://bugzil.la/1231131
 spec: https://w3c.github.io/mediacapture-fromelement/#html-canvas-element-media-capture-extensions
+# https://caniuse.com/mediacapture-fromelement is not linked because it covers
+# <audio>, <video>, and <canvas>, which are split here in web-features.
 group: canvas
 status:
   compute_from: api.HTMLCanvasElement.captureStream
