--- a/features/execcommand.yml
+++ b/features/execcommand.yml
@@ -1,6 +1,7 @@
 name: execCommand()
-description: The `execCommand()` method reads and writes from the clipboard and performs editing commands on editable text, such as changing the font name or style. Related methods check whether commands are supported, enabled, or applied.
+description: The `document.execCommand()` method reads and writes from the clipboard and performs editing commands on editable text, such as changing the font name or style. Related methods check whether commands are supported, enabled, or applied.
 spec: https://w3c.github.io/editing/docs/execCommand/
+caniuse: document-execcommand
 group: clipboard
 discouraged:
   according_to:
