--- a/features/navigation-timing.yml
+++ b/features/navigation-timing.yml
@@ -1,6 +1,7 @@
 name: Navigation timing
 description: The `navigation` performance entry and the `PerformanceNavigationTiming` API measures navigation events, such as loading time or the number of redirects.
 spec: https://w3c.github.io/navigation-timing/
+caniuse: nav-timing
 group: performance
 status:
   compute_from: api.PerformanceNavigationTiming
