--- a/features/share.yml
+++ b/features/share.yml
@@ -1,5 +1,5 @@
 name: navigator.share()
-description: The `navigator.share()` method invokes the device's native sharing mechanism and passes text, links, files, and other content to share targets. Also knows as the Web Share API.
+description: The `navigator.share()` method invokes the device's native sharing mechanism and passes text, links, files, and other content to share targets. Also known as the Web Share API.
 spec: https://w3c.github.io/web-share/
 status:
   compute_from: api.Navigator.share
