Add WebAuthn signals feature; group WebAuthn features

--- a/features/webauthn-public-key-easy.yml
+++ b/features/webauthn-public-key-easy.yml
@@ -1,3 +1,4 @@
 name: Web authentication easy public key access
 description: The `getAuthenticatorData()`, `getPublicKey()`, and `getPublicKeyAlgorithm()` methods of `AuthenticatorAttestationResponse` access credential data inside `attestationObject` without the need to parse it.
 spec: https://w3c.github.io/webauthn/#sctn-public-key-easy
+group: webauthn
