--- a/features/periodic-background-sync.yml
+++ b/features/periodic-background-sync.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: Web Periodic Background Synchronization
-description: TODO
+name: Periodic background sync
+description: The background synchronization API fires a recurring `periodicsync` event in a service worker. You can use this to update data in the background at regular intervals.
 spec: https://wicg.github.io/periodic-background-sync/
 compat_features:
   - api.PeriodicSyncEvent
