Fix bad `package.json` merge

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "hast-util-to-string": "^3.0.1",
     "prettier": "^3.6.2",
     "quicktype": "^23.2.5",
+    "rehype-parse": "^9.0.1",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
