Use `IntersectionObserver` in the description of IO
This aligns with the style of the ResizeObserver feature

--- a/features/intersection-observer.yml
+++ b/features/intersection-observer.yml
@@ -1,5 +1,5 @@
 name: Intersection observer
-description: The Intersection Observer API asynchronously observes changes in the intersection of a target element with an ancestor element or with a top-level document's viewport.
+description: The `IntersectionObserver` API asynchronously observes changes in the intersection of a target element with an ancestor element or with a top-level document's viewport.
 spec: https://w3c.github.io/IntersectionObserver/
 status:
   compute_from: api.IntersectionObserverEntry.isIntersecting
