--- a/features/scroll-buttons.yml
+++ b/features/scroll-buttons.yml
@@ -2,3 +2,4 @@ name: ::scroll-button
 description: The `::scroll-button(<dir>)` CSS pseudo-element is a focusable button which scrolls its originating scroll container element in the specified direction.
 spec: https://drafts.csswg.org/css-overflow-5/#scroll-buttons
 group: scrolling
+compat_features: css.selectors.scroll-button
