--- a/features/font-feature-settings.yml.dist
+++ b/features/font-feature-settings.yml.dist
@@ -31,6 +31,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
   #   firefox: "34"
   #   firefox_android: "34"
   #   safari: "10"
