--- a/features/font-variation-settings.yml.dist
+++ b/features/font-variation-settings.yml.dist
@@ -30,6 +30,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
   #   firefox: "62"
   #   firefox_android: "62"
   - css.at-rules.font-face.font-variation-settings
