--- a/features/readable-byte-streams.yml.dist
+++ b/features/readable-byte-streams.yml.dist
@@ -46,6 +46,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
   #   firefox: "134"
   #   firefox_android: "134"
   - api.ReadableStreamBYOBReader.read.options_min_parameter
