--- a/features/uint8array-base64-hex.yml.dist
+++ b/features/uint8array-base64-hex.yml.dist
@@ -4,6 +4,8 @@
 status:
   baseline: false
   support:
+    chrome: "140"
+    chrome_android: "140"
     firefox: "133"
     firefox_android: "133"
     safari: "18.2"
