--- a/features/draft/spec/css-ui-4.yml.dist
+++ b/features/draft/spec/css-ui-4.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    chrome: "140"
+    chrome_android: "140"
 compat_features:
   - css.properties.caret-animation
   - css.properties.caret-animation.auto
