--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -952,6 +952,12 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
+  - api.ToggleEvent.source
+
+  # baseline: false
+  # support:
   #   firefox: "140"
   #   firefox_android: "140"
   - html.elements.h1.no_ua_styles_in_article_aside_nav_section
@@ -960,6 +966,5 @@ compat_features:
   # baseline: false
   # support: {}
   - api.Navigator.authentication
-  - api.ToggleEvent.source
   - html.elements.hr.hr_in_select
   - html.elements.track.kind.descriptions
