--- a/features/draft/spec/webdriver-bidi.yml.dist
+++ b/features/draft/spec/webdriver-bidi.yml.dist
@@ -698,10 +698,32 @@ compat_features:
   - webdriver.bidi.webExtension.uninstall
   - webdriver.bidi.webExtension.uninstall.extension_parameter
 
+  # baseline: false
+  # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
+  - webdriver.bidi.browser.createUserContext.unhandledPromptBehavior_parameter
+  - webdriver.bidi.emulation.setScreenOrientationOverride
+  - webdriver.bidi.emulation.setScreenOrientationOverride.contexts_parameter
+  - webdriver.bidi.emulation.setScreenOrientationOverride.screenOrientation_parameter
+  - webdriver.bidi.emulation.setScreenOrientationOverride.userContexts_parameter
+  - webdriver.bidi.emulation.setTimezoneOverride
+  - webdriver.bidi.emulation.setTimezoneOverride.contexts_parameter
+  - webdriver.bidi.emulation.setTimezoneOverride.timezone_parameter
+  - webdriver.bidi.emulation.setTimezoneOverride.userContexts_parameter
+  - webdriver.bidi.network.disownData.collector_parameter
+  - webdriver.bidi.network.disownData.dataType_parameter
+  - webdriver.bidi.network.disownData.request_parameter
+  - webdriver.bidi.network.getData.collector_parameter
+  - webdriver.bidi.network.getData.dataType_parameter
+  - webdriver.bidi.network.getData.disown_parameter
+  - webdriver.bidi.network.getData.request_parameter
+  - webdriver.bidi.network.removeDataCollector
+  - webdriver.bidi.network.removeDataCollector.collector_parameter
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support: {}
-  - webdriver.bidi.browser.createUserContext.unhandledPromptBehavior_parameter
   - webdriver.bidi.browser.setClientWindowState
   - webdriver.bidi.browser.setClientWindowState.clientWindow_parameter
   - webdriver.bidi.browsingContext.historyUpdated_event
@@ -710,18 +732,10 @@ compat_features:
   - webdriver.bidi.browsingContext.historyUpdated_event.url_parameter
   - webdriver.bidi.browsingContext.userPromptClosed_event.type_parameter.beforeunload
   - webdriver.bidi.browsingContext.userPromptOpened_event.type_parameter.beforeunload
-  - webdriver.bidi.emulation.setScreenOrientationOverride
-  - webdriver.bidi.emulation.setScreenOrientationOverride.contexts_parameter
-  - webdriver.bidi.emulation.setScreenOrientationOverride.screenOrientation_parameter
-  - webdriver.bidi.emulation.setScreenOrientationOverride.userContexts_parameter
   - webdriver.bidi.emulation.setScriptingEnabled
   - webdriver.bidi.emulation.setScriptingEnabled.contexts_parameter
   - webdriver.bidi.emulation.setScriptingEnabled.enabled_parameter
   - webdriver.bidi.emulation.setScriptingEnabled.userContexts_parameter
-  - webdriver.bidi.emulation.setTimezoneOverride
-  - webdriver.bidi.emulation.setTimezoneOverride.contexts_parameter
-  - webdriver.bidi.emulation.setTimezoneOverride.timezone_parameter
-  - webdriver.bidi.emulation.setTimezoneOverride.userContexts_parameter
   - webdriver.bidi.network.addDataCollector
   - webdriver.bidi.network.addDataCollector.collectorType_parameter
   - webdriver.bidi.network.addDataCollector.contexts_parameter
@@ -729,20 +743,11 @@ compat_features:
   - webdriver.bidi.network.addDataCollector.maxEncodedDataSize_parameter
   - webdriver.bidi.network.addDataCollector.userContexts_parameter
   - webdriver.bidi.network.authRequired_event.response_parameter
-  - webdriver.bidi.network.disownData.collector_parameter
-  - webdriver.bidi.network.disownData.dataType_parameter
-  - webdriver.bidi.network.disownData.request_parameter
-  - webdriver.bidi.network.getData.collector_parameter
-  - webdriver.bidi.network.getData.dataType_parameter
-  - webdriver.bidi.network.getData.disown_parameter
-  - webdriver.bidi.network.getData.request_parameter
   - webdriver.bidi.network.provideResponse.body_parameter
   - webdriver.bidi.network.provideResponse.cookies_parameter
   - webdriver.bidi.network.provideResponse.headers_parameter
   - webdriver.bidi.network.provideResponse.reasonPhrase_parameter
   - webdriver.bidi.network.provideResponse.statusCode_parameter
-  - webdriver.bidi.network.removeDataCollector
-  - webdriver.bidi.network.removeDataCollector.collector_parameter
   - webdriver.bidi.network.responseCompleted_event
   - webdriver.bidi.network.responseCompleted_event.context_parameter
   - webdriver.bidi.network.responseCompleted_event.intercepts_parameter
