--- a/features/font-loading.yml.dist
+++ b/features/font-loading.yml.dist
@@ -142,6 +142,8 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "140"
+  #   chrome_android: "140"
   #   firefox: "62"
   #   firefox_android: "62"
   - api.FontFace.variationSettings
