--- a/features/custom-media-queries.yml
+++ b/features/custom-media-queries.yml
@@ -1,4 +1,4 @@
 name: Custom media queries
-description: Named aliases for longer and more complex media queries, deffined once in a `@custom-media` rule and used in multiple times accross `@media` rules.
+description: Named aliases for longer and more complex media queries, deffined once in a `@custom-media` rule and used in multiple times `@media` rules.
 spec: https://www.w3.org/TR/mediaqueries-5/#custom-mq
 group: media-queries
